--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "db1234bc-7531-4643-925f-a368cd0af195",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "530331a6-0cf7-4cb6-8f9a-bc748b9dd4ee",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "6963442b-149a-43b1-9d4d-4f4e286c01b6",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "b8cc4d00-cbfb-4144-b4c0-f8c7c998296c",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "438b1b3f-0d14-4d38-95d3-ac94e14dac6d",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "f80d225a-626c-435f-a620-c42e543e34e3",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "id": "58654422-8ff6-46bc-9665-f68983a45cf2",
    "metadata": {},
    "outputs": [
@@ -339,14 +339,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8208955223880597\n"
+      "Accuracy: 0.8059701492537313\n"
      ]
     }
    ],
    "source": [
     "## Model construction\n",
     "\n",
-    "model = DecisionTreeClassifier()\n",
+    "model = DecisionTreeClassifier(max_depth=10, min_samples_leaf=2)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "accuracy = model.score(X_test, y_test)\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "216f4301-af1a-4ba6-ab4d-d9a5a694fcba",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "684cf625-58d2-4fd9-a889-17a7fba95099",
    "metadata": {},
    "outputs": [
